[tool.poetry]
name = "pyfilerver"
version = "0.0.6"
description = "Python Http File Server: Added file upload function to `http.server`"
authors = ["ianvzs <ianvzs@outlook.com>", "saint <ysudqfs@163.com>"]
readme = "README.md"
repository = "https://github.com/IanVzs/pyfilerver"
license = "MIT"
packages = [
    { include = "pyfilerver" },
]

[tool.poetry.scripts]
pyfilerver = "pyfilerver:main"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"


[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = {version = "*", allow-prereleases = true}
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.2"
myst-parser = "^0.15.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
